@@ -23,6 +23,7 @@ import DSA
 if m2.OPENSSL_VERSION_NUMBER >= 0x90800F and m2.OPENSSL_NO_EC == 0:
     import EC
 import Err
+import Engine
 import EVP
 import RSA
 import RC4
