@@ -51,6 +51,7 @@ static PyObject *ssl_set_tmp_rsa_cb_func;
 %include _pkcs7.i
 %include _util.i
 %include _ec.i
+%include _engine.i
 
 #ifdef SWIG_VERSION
 %constant int encrypt = 1;
