@@ -29,6 +29,7 @@ def suite():
         'tests.test_authcookie',
         'tests.test_dh',
         'tests.test_dsa',
+        'tests.test_engine',
         'tests.test_evp',
         'tests.test_rand',
         'tests.test_rsa',
